# dsa-learning-agent-

./: .env.example  .gitignore  README.md  api-examples-report.md  justfile  pyproject.toml  secondary_verification_report.md
src/: config.py  main.py
src/agents/: llm_router_agent.py  materials_agent.py  registry.py  support_agent.py  test_generation_agent.py  verification_agent.py
src/core/: database.py  llm.py  vector_store.py
src/data_processing/: __init__.py  db_populator.py  pdf_parser.py  text_splitter.py
src/models/: schemas.py
src/routers/: assessment.py  health.py  llm_router.py  materials.py  support.py  tests.py  verification.py
src/scripts/: generate_codebase_context.py  generate_endpoint_report.py  measure_secondary_verification.py  populate_db.py
